Bug 480516 - With "Custom" panel width/height, hovering over the Panel itself causes the Panel edit mode dialog to close
Summary: With "Custom" panel width/height, hovering over the Panel itself causes the P...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Panel (other bugs)
Version First Reported In: 5.92.0
Platform: Other Linux
: NOR major
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2024-01-30 02:51 UTC by Darin Miller
Modified: 2024-02-05 17:49 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Darin Miller 2024-01-30 02:51:17 UTC
SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***


STEPS TO REPRODUCE
1. Enter Edit Mode
2. Open Panel Settings
3. Select Length -> Custom
4. Hover mouse over resized panel and watch Panel Setting disappear

OBSERVED RESULT
Panel edit mode suddenly closes

EXPECTED RESULT
Panel edit mode should remain open until manually closed.

SOFTWARE/OS VERSIONS
Operating System: KDE neon Testing Edition
KDE Plasma Version: 5.92.90
KDE Frameworks Version: 5.249.0
Qt Version: 6.6.1
Kernel Version: 6.5.0-15-generic (64-bit)
Graphics Platform: Wayland
Processors: 8 × Intel® Core™ i7-6700HQ CPU @ 2.60GHz
Memory: 15.5 GiB of RAM
Graphics Processor: Mesa Intel® HD Graphics 530
Manufacturer: Dell Inc.
Product Name: Inspiron 7559
System Version: 1.3.1

ADDITIONAL INFORMATION
Comment 1 Doug 2024-01-30 05:34:12 UTC
Can confirm (also Neon Testing).
Comment 2 Bug Janitor Service 2024-02-04 10:46:14 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/3862
Comment 3 Nate Graham 2024-02-05 17:29:37 UTC
Git commit e936d7b44394f6ef5be89008f302472e8954a0a1 by Nate Graham, on behalf of Niccolò Venerandi.
Committed on 05/02/2024 at 17:29.
Pushed by ngraham into branch 'master'.

PanelConfigView: Delegate Ruler visibility checks to main config window

The config view is more able to check for scenarios where focus goes away but the config still shouldn't hide.

M  +2    -5    shell/panelconfigview.cpp
M  +2    -0    shell/panelconfigview.h

https://invent.kde.org/plasma/plasma-workspace/-/commit/e936d7b44394f6ef5be89008f302472e8954a0a1
Comment 4 Nate Graham 2024-02-05 17:49:59 UTC
Git commit e2b57011bcf7721e4ff94ed32e628ae8f70e5142 by Nate Graham, on behalf of Niccolò Venerandi.
Committed on 05/02/2024 at 17:29.
Pushed by ngraham into branch 'Plasma/6.0'.

PanelConfigView: Delegate Ruler visibility checks to main config window

The config view is more able to check for scenarios where focus goes away but the config still shouldn't hide.


(cherry picked from commit e936d7b44394f6ef5be89008f302472e8954a0a1)

M  +2    -5    shell/panelconfigview.cpp
M  +2    -0    shell/panelconfigview.h

https://invent.kde.org/plasma/plasma-workspace/-/commit/e2b57011bcf7721e4ff94ed32e628ae8f70e5142