PanelConfigView: Delegate Ruler visibility checks to main config window

The config view is more able to check for scenarios where focus goes away but the config still shouldn't hide.

BUG: 480516


(cherry picked from commit e936d7b44394f6ef5be89008f302472e8954a0a1)